<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@mipmap/home_bg"
    android:padding="20dp"
    >
    <RelativeLayout
        android:id="@+id/ll_choose_success"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/tv_querenwanbi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/querenwanbi"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/tv_biyan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biyan"
            android:textColor="@color/app_text_new_black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            />
        <ImageButton
            android:id="@+id/btn_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_bg_selector"
            android:src="@mipmap/wz_kssr"
            android:layout_below="@+id/tv_biyan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:id="@+id/tv_langrencaozuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_text_blue"
            android:text="@string/langrencaozuo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/btn_success"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ll_choose_fail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_youwu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/yellow"
            android:text="@string/youwu"
            android:layout_centerHorizontal="true"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_above="@+id/tv_chongxinxuanze"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/tv_chongxinxuanze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_text_new_black"
            android:text="@string/chongxinxuanze"
            android:layout_centerInParent="true"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/btn_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellow_bg_selector"
            android:src="@mipmap/wz_cxxz"
            android:layout_below="@+id/tv_chongxinxuanze"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            />


    </RelativeLayout>





</RelativeLayout>