<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_bg"
    tools:context=".Activity.Activity.MainActivity"
    >

    <LinearLayout
        android:id="@+id/swith_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bt_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/mode_switch_selector"
            android:background="@mipmap/kuang_shoupai"
            />

        <TextView
            android:id="@+id/tv_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/mode_youpai"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size"
            android:gravity="center_vertical"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_player_num_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/play_num_ll"/>

    <LinearLayout
        android:id="@+id/play_num_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_above="@+id/bt_conform"
        android:layout_marginBottom="110dp"
        >

        <ImageButton
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sub_btn_selector"/>

        <TextView
            android:id="@+id/tv_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:background="@mipmap/bg_renshu"
            />
        <ImageButton
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/plus_btn_selector"/>

    </LinearLayout>



    <ImageView
        android:id="@+id/img_tv_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_juesefenpei"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>
    <TextView
        android:id="@+id/tv_renju"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img_tv_bg"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="12人局"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <TextView
            android:id="@+id/tv_role_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/common_text_size"
            android:layout_alignBottom="@+id/img_tv_bg"
            android:layout_marginTop="30dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/role_num_introduction"
        android:layout_below="@+id/swith_ll"
        android:layout_centerHorizontal="true" />




    <ImageView
        android:id="@+id/bt_conform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:src="@mipmap/wz_ksyx"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/yellow_bg_selector"/>
</RelativeLayout>
